# stevia

./: Cargo.toml  README.md  make  make.sh
.github/: .env
.github/actions/setup/: action.yml
.github/workflows/: build.yml  main.yml  publish.yml  test.yml
.scripts/: build-sbf.sh  build.sh  clippy.sh  doc.sh  fmt.sh  hack.sh  miri.sh  spellcheck.sh  test.sh
src/: error.rs  from_bytes.rs  lib.rs  maybe_null.rs  nullable.rs  transmute.rs
src/collections/: array_set.rs  avl_tree.rs  hash_set.rs  mod.rs  prefix_array_set.rs  u8_avl_tree.rs
src/pod/: pod_bool.rs  pod_option.rs  pod_str.rs
src/types/: bool.rs  mod.rs  prefix_str.rs  str.rs
