[package]
name = "stevia"
description = "A zero-copy library for creating lightweight data structures"
version = "0.0.0"
edition = "2021"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
repository = "https://github.com/nifty-oss/stevia"
license = "Apache-2.0"
readme = "./README.md"
rust-version = "1.84.1"

[lib]
crate-type = ["rlib"]
